--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,15 +1,17 @@
-<div class="login-container">
-    <h1>Login</h1>
-    <form class="login-form" (ngSubmit)="onLogin()">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required [(ngModel)]="username">
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required  [(ngModel)]="password">
-        </div>
+<div class="container">
+    <div id="div-login">
+        <p id="title">Inizia a <span>giocare</span>, accedi al sito!</p>
+        <form (ngSubmit)="onLogin()">
+            <div id="div-form">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Inserisci il tuo nickname" [(ngModel)]="username">
+            </div>
+            <div id="div-form">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Inserisci la tua password" required  [(ngModel)]="password">
+            </div>
+        </form>
         <button type="submit" class="btn-login">Login</button>
-    </form>
-    <p class="register-link">Non sei registrato? <a href="/register">Registrati qui</a></p>
+        <p class="register-link">Non sei ancora <span>registrato</span>? <a href="/register">Clicca qui</a></p>
+    </div>
 </div>
