--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,14 +1,17 @@
-<div class="registration-container">
-    <h1>Form registrazione</h1>
-    <form class="registration-form" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required [(ngModel)]="username">
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required  [(ngModel)]="password">
-        </div>
-        <button type="submit" class="btn-register">Registrati</button>
-    </form>
+<div class="container">
+    <div id="div-login">
+    <p id="title">Registrati e inizia a <span>giocare</span>!</p>
+        <form (ngSubmit)="onSubmit()">
+            <div id="div-form">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" placeholder="Inserisci il tuo nickname" required [(ngModel)]="username">
+            </div>
+            <div id="div-form">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" placeholder="Inserisci la tua password"  [(ngModel)]="password">
+            </div>
+            <button type="submit" class="btn-register">Registrati</button>
+            <p class="register-link">Ci hai <span>ripensato</span>? <a href="/home">Torna alla home</a></p>
+        </form>
+    </div>
 </div>
