corretta formattazione dei form

--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div id="div-login">
+    <div id="div-register">
     <p id="title">Registrati e inizia a <span>giocare</span>!</p>
         <form (ngSubmit)="onSubmit()">
             <div id="div-form">
