--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -10,11 +10,11 @@
     border-radius: 5px;
 }
 
-#div-login {
+#div-register {
     display: inline;
     text-align: center;
     width: 600px;
-    height: 300px;
+    height: 250px;
     margin-top: 10rem;
     padding: 25px 25px;
     background-color: rgb(244, 244, 244);
