--- a/frontend/src/app/components/form-story/form-story.component.css
+++ b/frontend/src/app/components/form-story/form-story.component.css
@@ -1,49 +1,89 @@
-.story-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    border-radius: 5px;
+}
+
+#div-story {
+    display: inline;
+    text-align: center;
+    width: 25%;
+    height: 325px;
+    margin-top: 7.5rem;
+    padding: 25px 25px;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px #aaaaaa;
+}
+
+#title {
+    font-size: 18pt;
+    font-weight: bold;
+    gap: 1rem;
+}
+
+form {
+    margin-top: 2rem;
+}
+
+span {
+    color: red;
+}
+
+#div-form {
+    display: inline-block;
+    text-align: left;
+    padding: 0.5rem;
+    width: 90%;
+    gap: 2rem;
+}
+
+label:hover {
+    transition: color 0.5s;
+    color: darkred;
+}
+
+input {
+    font-size: 9pt;
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
 }
 
-h1 {
-    text-align: center;
+input:hover {
+    transition: border-color 0.5s;
+    border: 1px solid darkred;
 }
 
-.story-form {
-    margin-top: 20px;
+button {
+    font-size: 10pt;
+    color: white;
+    width: 82.5%;
+    height: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 7.5px 7.5px;
+    background-color: crimson;
+    border: none !important;
+    border-radius: 10px;
 }
 
-.form-group {
-    margin-bottom: 15px;
+button:hover {
+    transition: background-color 0.5s;
+    background-color: darkred;
 }
 
-label {
-    display: block;
-    font-weight: bold;
-}
-
-input[type="text"] { 
+#support-message {
+    float: center;
     width: 100%;
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-
-button.btn-creazione { 
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button.btn-creazione:hover { 
-    background-color: #0056b3;
 }
