--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
         <button mat-button routerLink="/register" *ngIf="!isAuthenticated()">Sign Up</button>
 
         <!-- Mostra il bottone "Paga" solo se showPaymentButton è true -->
-        <button mat-button routerLink="/payment" *ngIf="showPaymentButton">Paga</button>
+        <button mat-button routerLink="/payment" *ngIf="currentUrl === '/storJPage' && showPaymentButton">Paga</button>
 
         <!-- Mostra il bottone "Crea Scenario" solo se l'utente è su "/createStory"-->
         <button mat-button *ngIf="currentUrl === '/createStory' && isAuthenticated() && !isInTextEditMode" (click)="saveStory()">Salva
