--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.css
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.css
@@ -1,26 +1,58 @@
-div {
-    position: static;
-}
-
-.hidden-visible:hover span {
-    color: blue;
-    visibility: visible;
-}
-
-.visible-hidden {
-    margin-left: 10px;
-    visibility: hidden;
-}
-
-.messaggio {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+.container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-    text-align: center;
+    justify-content: center;
+    width: 100%;
+    text-decoration: none;
+}
+
+.div-welcome {
+    font-family: Arial, sans-serif;
+    margin-top: 7.5rem;
+    padding: 40px 40px;
+    width: 30%;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    text-align: justify;
+    box-shadow: 10px 10px 5px #aaaaaa;
+}
+
+#title {
+    width: auto;
+    text-align: left;
+    font-size: 20pt;
+    margin-bottom: 2rem;
+}
+
+p {
+    text-align: left;
+    font-size: 16px;
+}
+
+span {
+    color:red;
+}
+
+#span-button {
+    color: crimson;
+}
+
+#span-button:hover {
+    transition: background-color 0.5s;
+    padding: 4px 1px;
+    border-bottom: 2px solid black;
+    background-color: #aaaaaa;
+}
+
+a {
+    padding: 12.5px 12.5px;
+    text-decoration: none;
+    color: white;
+    background-color: crimson;
+    border-radius: 10px;
+}
+
+a:hover {
+    transition: background-color 0.5s;
+    background-color: darkred;
 }
