--- a/frontend/src/app/components/stor-jpage/stor-jpage.component.html
+++ b/frontend/src/app/components/stor-jpage/stor-jpage.component.html
@@ -1,6 +1,9 @@
 <app-navbar></app-navbar>
-<div class="messaggio">
-    <h1>Benvenuto su storJ</h1>
-    <p>Per poter giocare ad una storia clicca il bottone <span class="hidden-visible">Gioca<div><span class="visible-hidden">Devi aver prima effettuato un pagamento</span></div></span></p>
-    <p>Per poter creare una storia clicca il bottone <span>Crea<span></span></span></p>
+<div class="container">    
+    <div class="div-welcome">
+        <p id="title">Ciao <span>Matteo</span>, bentornato su <span>storJ</span>!</p>
+        <p>Per poter giocare ad una <span>storia interattiva</span> clicca il bottone <span id="span-button">Gioca</span>!</p>
+        <p>Attenzione, per poter giocare devi effettuare un <span>pagamento</span>, clicca sul bottone <span id="span-button">Paga</span> posto sulla navbar in <span>alto</span>.</p>
+        <p>Per poter creare una <span>storia interattiva</span> clicca il bottone <span id="span-button">Crea</span>.</p>
+    </div>
 </div>
