--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
     display: flex;
     align-items: center;
@@ -7,7 +11,6 @@
 }
 
 .div-text {
-    font-family: Arial, sans-serif;
     margin-top: 7.5rem;
     padding: 40px 40px;
     width: 30%;
