--- a/frontend/src/app/components/home-stories/home-stories.component.css
+++ b/frontend/src/app/components/home-stories/home-stories.component.css
@@ -1,44 +1,83 @@
+* {
+    font-family: Arial, sans-serif;
+}  
+
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px; 
     justify-content: center;
+    width: 100vw;
+    gap: 20px; 
     margin-top: 30px; 
-    padding: 0 20px; 
 }
 
-.story-box {
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 10px;
+.div-title {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    width: calc(50% - 20px); 
     box-sizing: border-box;
+    text-align: center;
+    width: 78%; 
+    margin-top: 4rem;
+    margin-bottom: 1.5rem;
+    padding: 20px;
+    border-bottom: 2px solid rgb(204, 204, 204, 0.7);
+    border-radius: none;
 }
 
-.info {
-    display: block; 
+#title {
+    font-size: 20pt;
+    font-weight: bold;
 }
 
-.edit-button {
-    margin-top: auto; 
-    text-align: right; 
+span {
+    color: red;
 }
 
-.no-stories-container {
+.div-story {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center; /* Centra il testo all'interno del div */
-    height: 50vh; /* Occupa metà dello spazio verticale disponibile */
-    font-size: 4vw; /* Adatta la dimensione del testo alla larghezza della viewport */
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 25%; 
+    padding: 20px;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px #aaaa;
 }
-  
-  
-.no-stories-message {
-  padding: 20px;
-  border: 2px solid #000;
-  border-radius: 10px;
+
+#div-info {
+    float: left;
+    height: 100px;
+}
+
+.span-header {
+    font-weight: bold;
+    color: red;
+}
+
+.span-text {
+    font-weight: none !important;
+    color: black;
+}
+
+.span-text:hover {
+    border-bottom: 1px solid black;
+}
+
+.div-button {
+    text-align: right; 
+    margin-top: auto; 
+}
+
+button {
+    font-size: 9pt;
+    color: white;
+    padding: 7.5px 7.5px;
+    background-color: crimson;
+    border-radius: 5px;
+    border: none !important;
+}
+
+button:hover {
+    transition: background-color 0.5s;
+    background-color: darkred;
 }
