--- a/frontend/src/app/components/form-scenario/form-scenario.component.html
+++ b/frontend/src/app/components/form-scenario/form-scenario.component.html
@@ -23,7 +23,7 @@
                     <option value="FINALE">Finale</option>
                 </select>
             </div>
-            <div>
+            <div class="div-object">
                 <label for="objectSelect">Oggetto</label>
                 <select id="objectSelect" name="objectSelect" [(ngModel)]="selectedObjectId">
                     <option disabled>Tipologia di oggetto</option>
