--- a/frontend/src/app/components/form-story-object/form-story-object.component.css
+++ b/frontend/src/app/components/form-story-object/form-story-object.component.css
@@ -1,63 +1,96 @@
-.story-object-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+* {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+    width: 100%;
+}
+
+.div-object {
+    display: grid;
+    align-items: center;
+    justify-content: center;   
+    width: 35%;
+    margin-top: 5rem;
+    padding: 25px 25px;
+    background-color: rgb(244, 244, 244);
+    border-radius: 10px;
+    box-shadow: 15px 15px 15px #aaaa;
+}
+
+#title {
     text-align: center;
-}
-
-.story-object-form {
-    margin-top: 20px;
-}
-
-.form-group {
-    margin-bottom: 15px;
-}
-
-label {
-    display: block;
+    font-size: 20pt;
     font-weight: bold;
 }
 
-input[type="text"] {
+span {
+    color: red;
+}
+
+.div-form{
+    align-items: center;
     width: 100%;
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    margin-top: 1rem;
+}
+
+label {
+    float: left;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+label:hover {
+    transition: color 0.5s;
+    color: darkred;
+}
+
+input {
+    font-size: 9pt;
     box-sizing: border-box;
-}
-
-button.btn-creazione {
     width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-.btn-creazione:disabled {
-    color: #cccccc;
-    background-color: #aaaaaa;
-    border: 1px solid #999999;
-    cursor: not-allowed;
-}
-
-button.btn-creazione:hover {
-    background-color: #0056b3;
+input:hover {
+    transition: border 0.5s;
+    border: 1px solid darkred;
 }
 
 textarea {
-    width: 100%;
-    height: 150px;
-    box-sizing: border-box;
+    font-size: 9pt;
+    width: 98.5%;
+    height: 75px;
     resize: none;
+}
+
+button {
+    font-size: 10pt;
+    color: white;
+    width: 100%;
+    height: auto;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+    padding: 7.5px 7.5px;
+    background-color: crimson;
+    border: none !important;
+    border-radius: 10px;
+}
+
+button:hover {
+    transition: background-color 0.5s;
+    background-color: darkred;
+}
+
+.message-support {
+    font-size: 11pt;
+    text-align: center;
+    margin-top: 0.5rem;
 }
